fix picture on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -164,8 +164,8 @@ img {
   -moz-transition: opacity 0.5s ease-in-out;
   transition: opacity 0.5s ease-in-out;
   left: 50%;
-  width: 100px;
-  margin-top: -50px;
+  width: 150px;
+  margin-top: -75px;
 }
 .navbar-custom .avatar-container  .avatar-img-border {
   width: 100%;
